# robot_movement

./: .gitignore  CMakeLists.txt  CocCoc_HomeTest.cpp  README.md  create_testcase.cpp  drawing_robot.cpp  drawing_robot.h  main.cpp  test_drawing_robot.cpp
testcases/: commands.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
testcases_output/: commands.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
